@@ -1,4 +1,4 @@
-// Copyright 2006, 2007, 2008, 2009, 2010, 2012 Global Virtual Airlines Group. All Rights Reserved.
+// Copyright 2006, 2007, 2008, 2009, 2010, 2012, 2014 Global Virtual Airlines Group. All Rights Reserved.
 package org.deltava.service;
 
 import java.util.*;
@@ -8,18 +8,15 @@ import java.sql.Connection;
 import static javax.servlet.http.HttpServletResponse.*;
 
 import org.jdom2.*;
-
 import org.deltava.beans.*;
-import org.deltava.beans.schedule.GeoPosition;
-import org.deltava.beans.stats.PilotLocation;
-
+import org.deltava.beans.stats.*;
 import org.deltava.dao.*;
 import org.deltava.util.*;
 
 /**
  * A Web Service to display Pilot Locations on a map.
  * @author Luke
- * @version 4.2
+ * @version 5.4
  * @since 1.0
  */
 
@@ -36,9 +33,6 @@ public class PilotLocationService extends WebService {
 	@Override
 	public int execute(ServiceContext ctx) throws ServiceException {
 		boolean isHR = ctx.isUserInRole("HR");
-
-		// Calculate the random location adjuster (between -1.5 and +1.5)
-		double rndAmt = ((rnd.nextDouble() * 3) - 1) / GeoLocation.DEGREE_MILES;
 
 		// Get active pilots and their locations
 		Collection<Pilot> pilots = null;
@@ -63,14 +57,12 @@ public class PilotLocationService extends WebService {
 		// Loop through the GeoLocations, apply the random adjuster and combine with the Pilot
 		for (Iterator<Pilot> i = pilots.iterator(); i.hasNext();) {
 			Pilot usr = i.next();
-			GeoLocation gl = locations.get(new Integer(usr.getID()));
-			if (gl != null) {
-				GeoPosition gp = new GeoPosition(gl);
-				gp.setLatitude(gp.getLatitude() + rndAmt);
-				gp.setLongitude(gp.getLongitude() + rndAmt);
+			FuzzyPosition fp = (FuzzyPosition) locations.get(Integer.valueOf(usr.getID()));
+			if (fp != null) {
+				GeoLocation gl = isHR ? fp : GeoUtils.bearingPoint(fp, fp.getH(), rnd.nextInt(360));
 					
 				// Init the location bean
-				PilotLocation loc = new PilotLocation(usr, gp);
+				PilotLocation loc = new PilotLocation(usr, gl);
 				loc.setAllowDelete(isHR);
 				
 				// Build the element
@@ -79,8 +71,8 @@ public class PilotLocationService extends WebService {
 				e.setAttribute("rank", usr.getRank().getName());
 				e.setAttribute("eqType", usr.getEquipmentType());
 				e.setAttribute("minZoom", "1");
-				e.setAttribute("lat", StringUtils.format(loc.getLatitude(), "##0.00000"));
-				e.setAttribute("lng", StringUtils.format(loc.getLongitude(), "##0.00000"));
+				e.setAttribute("lat", StringUtils.format(gl.getLatitude(), "##0.00000"));
+				e.setAttribute("lng", StringUtils.format(gl.getLongitude(), "##0.00000"));
 				e.setAttribute("color", loc.getIconColor());
 				re.addContent(e);
 			}
@@ -96,7 +88,6 @@ public class PilotLocationService extends WebService {
 			throw error(SC_CONFLICT, "I/O Error", false);
 		}
 
-		// Return success code
 		return SC_OK;
 	}
 
@@ -104,6 +95,7 @@ public class PilotLocationService extends WebService {
 	 * Returns if the Web Service invocation is logged.
 	 * @return FALSE
 	 */
+	@Override
 	public boolean isLogged() {
 		return false;
 	}
